# backend-final

./: .gitignore  pyproject.toml  ruff.toml
app/: errors.py  exceptions.py  main.py
app/api/v1/: auth.py  client.py  index.py  sign.py
app/common/: config.py  consts.py  logger.json  logging.py
app/db/: base.py  database.py  mixins.py  models.py  redis.py
app/middlewares/: middleware.py  token_validator.py  trusted_hosts.py
app/schemas/: client.py  email.py  pet.py  sign.py  tel.py
app/services/: client_service.py  sign_service.py
app/utils/: dependencies.py  hashing.py  lifespan.py  mail.py  token.py
logs/: env.py
migrations/: env.py
migrations/versions/: 19c5fbb3ca3f_add_password_hash.py  395ea39c5b24_verified_field_add.py  5e9d54a979c6_table_filed_name_changed.py  795f5c37994b_sign_role_field_add.py  b95607b54df9_user_table_add.py  b99c6086ba2d_foreinkey_change.py  d9b68f4982a1_init.py  fa336f72c564_field_change.py
tests/: test_db.py
tests/api/v1/: test_user.py
